[gd_scene load_steps=3 format=3 uid="uid://b4arc7eoetvod"]

[ext_resource type="Script" path="res://Main.gd" id="1_p0h7g"]

[sub_resource type="LabelSettings" id="LabelSettings_temq6"]
font_size = 32

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0h7g")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -37.5
offset_right = 159.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Drop a log.txt file here."
label_settings = SubResource("LabelSettings_temq6")
horizontal_alignment = 1

[node name="ErrorLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Or select a file"

[node name="Button2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Or load logs directory"

[node name="FileDialog" type="FileDialog" parent="Panel"]
title = "Open a File"
size = Vector2i(500, 200)
popup_window = true
extend_to_title = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")
show_hidden_files = true

[node name="Tree" type="Tree" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -53.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Button" type="Button" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Select a new file"

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="select_file"]
[connection signal="file_selected" from="Panel/FileDialog" to="." method="parse_log_file"]
[connection signal="pressed" from="Panel/MarginContainer/Button" to="." method="select_file"]
